[gd_scene load_steps=33 format=3 uid="uid://d363vpefi1abh"]

[ext_resource type="Script" path="res://inimigo.gd" id="1_a2fm8"]
[ext_resource type="Texture2D" uid="uid://ujd26nt1qb7a" path="res://assets/Tiny Swords/Tiny Swords (Update 010)/Factions/Goblins/Troops/Torch/Red/Torch_Red.png" id="2_oprvn"]
[ext_resource type="Texture2D" uid="uid://d27hu46xcqpgs" path="res://assets/Tiny Swords/Tiny Swords (Update 010)/Factions/Knights/Troops/Dead/Dead.png" id="3_otmng"]
[ext_resource type="PackedScene" uid="uid://5iwgbjy3unps" path="res://ator/hitbox.tscn" id="4_lr8l0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o2v6x"]
atlas = ExtResource("2_oprvn")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypvu2"]
atlas = ExtResource("2_oprvn")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6457"]
atlas = ExtResource("2_oprvn")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwiol"]
atlas = ExtResource("2_oprvn")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo3uw"]
atlas = ExtResource("2_oprvn")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_edgrr"]
atlas = ExtResource("2_oprvn")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wxtp"]
atlas = ExtResource("2_oprvn")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwl4g"]
atlas = ExtResource("2_oprvn")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3px5"]
atlas = ExtResource("2_oprvn")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_d53ii"]
atlas = ExtResource("2_oprvn")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_31qrt"]
atlas = ExtResource("2_oprvn")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2aw8w"]
atlas = ExtResource("2_oprvn")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4wo3"]
atlas = ExtResource("3_otmng")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ifka"]
atlas = ExtResource("3_otmng")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjgqe"]
atlas = ExtResource("3_otmng")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mmu1"]
atlas = ExtResource("3_otmng")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_stbrm"]
atlas = ExtResource("3_otmng")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlvgb"]
atlas = ExtResource("3_otmng")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rw3c"]
atlas = ExtResource("3_otmng")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwkcr"]
atlas = ExtResource("3_otmng")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ub3m"]
atlas = ExtResource("3_otmng")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wr3t"]
atlas = ExtResource("3_otmng")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vguj8"]
atlas = ExtResource("3_otmng")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_btsuy"]
atlas = ExtResource("3_otmng")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0v41"]
atlas = ExtResource("3_otmng")
region = Rect2(768, 128, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_2mrtn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2v6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypvu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6457")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwiol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo3uw")
}],
"loop": true,
"name": &"andar",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_edgrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wxtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwl4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3px5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d53ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31qrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2aw8w")
}],
"loop": true,
"name": &"danoCausado",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4wo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ifka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjgqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mmu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stbrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlvgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rw3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwkcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ub3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wr3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vguj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btsuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0v41")
}],
"loop": true,
"name": &"morte",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6c5yi"]
radius = 17.0
height = 52.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7vqh6"]
size = Vector2(51, 49)

[node name="inimigo" type="CharacterBody2D" node_paths=PackedStringArray("_timerInimigo") groups=["inimigo"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_a2fm8")
_timerInimigo = NodePath("Timer")

[node name="animInimigo" type="AnimatedSprite2D" parent="."]
light_mask = 4
visibility_layer = 4
position = Vector2(0, -31)
sprite_frames = SubResource("SpriteFrames_2mrtn")
animation = &"andar"
autoplay = "andar"
speed_scale = 0.9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
light_mask = 4
visibility_layer = 4
position = Vector2(0, -28)
shape = SubResource("CapsuleShape2D_6c5yi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 1.5

[node name="colisao" type="RayCast2D" parent="."]
position = Vector2(-2, -36)
target_position = Vector2(-35, 0)
collision_mask = 2

[node name="detectaGuerreiro" type="RayCast2D" parent="."]
position = Vector2(1, -39)
target_position = Vector2(-35, 0)

[node name="hitbox" parent="." instance=ExtResource("4_lr8l0")]

[node name="colisaoDano" type="CollisionShape2D" parent="hitbox" groups=["inimigo"]]
position = Vector2(-0.5, -24.5)
shape = SubResource("RectangleShape2D_7vqh6")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
